# disk-cleanup

./: .gitignore  Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  README.md  pyproject.toml  requirements.txt  warn-DiskWiseAI.txt  xref-DiskWiseAI.html
.github/workflows/: build-store-msix.yml  windows-ci.yml
app/: __init__.py  constants.py  main.py  runtime.py
app/database/: local_database.py
app/docs/: architecture.md  cleanup-rules.md  packaging-notes.md  privacy-policy.md  privacy.md  qa-checklist.md  store-certification-notes.md  store-listing.md  store-submission-checklist.md
app/models/: __init__.py  ai.py  cleanup.py
app/services/: __init__.py  ai_advisor_service.py  ai_summary_service.py  cleanup_service.py  license_service.py  report_service.py  scan_service.py  settings_service.py
app/ui/: icons.py  main_window.py  onboarding_dialog.py  pricing_dialog.py  styles.py  widgets.py
app/ui/pages/: __init__.py  dashboard_page.py  duplicates_page.py  large_files_page.py  (+4 more)
app/utils/: formatting.py  paths.py  safety.py  secret_store.py
packaging/msix/: AppxManifest.template.xml
packaging/windows/: version_info.txt
scripts/: build-msix.ps1  build.ps1  capture-store-screenshots.py  generate-store-assets.py  run-wack.ps1  run.ps1  test.ps1  validate-store-readiness.py
tests/: test_ai_advisor.py  test_cleanup_safety.py  test_core_workflow.py  test_main_window.py  test_paths.py  test_pricing_dialog.py  test_reports_database.py  test_results_cleanup_state.py  test_runtime_logs.py  test_scan_service.py  test_settings_security.py
