[project]
name = "diskwise-ai"
version = "0.1.0"
description = "Local-first Windows disk cleanup and storage review built with Python and PySide6."
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.8",
  "platformdirs>=4.3",
  "python-lucide>=0.5,<1",
  "psutil>=6.0",
  "pydantic>=2.8",
  "pyinstaller>=6.10",
  "pytest>=8.3",
  "ruff>=0.12",
  "send2trash>=1.8",
]

[tool.ruff]
line-length = 100
